--- a/tools/cloudflare_config.json
+++ b/tools/cloudflare_config.json
@@ -1,7 +1,8 @@
 {
   "api_token": "67tkCp51nMje4C6hnGg8QBMfFnI6pty8xopAdo5_",
   "zone_id": "4c614822b87435f9f4f2cf4cc2688a5c",
-  "rule_id": "",
-  "source_pattern": "http.host eq \"onefly.top\"",
+  "ruleset_id": "0498ea46cc9a485c9e60615b0bf9921c",
+  "rule_id": "0c22e62fdb7f4339bc63e185de629287",
+  "source_pattern": "(http.request.full_uri wildcard r\"https://onefly.top/posts/8888.html\")",
   "redirect_suffix": "/join/88596413"
 }
