security: 移除敏感配置文件，添加 .example 模板

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,11 @@ yarn-error.log*
 .env*.local
 .env
 
+# sensitive config
+tools/cloudflare_config.json
+tools/link_config.json
+tools/*.log
+
 # vercel
 .vercel
 
